--- a/区块链/创世节点代码流程.md
+++ b/区块链/创世节点代码流程.md
@@ -1,3 +1,4 @@
+#### 创世节点初始化的时间
 ```
 $ ./lotus wallet import ~/.genesis-sectors/pre-seal-t01000.key
 imported key t3s7stjmitsl73onqys5teb4r3swtqciinway4hic6xtukjvd2n5l3nscowagmximqz2p3hv3rvpy3br5lncsa successfully!
@@ -104,13 +105,10 @@ $ ./lotus-storage-miner init --genesis-miner --actor=t01000 --sector-size=838860
 2020-07-01T14:30:42.053+0800    INFO    badger  v2@v2.0.3/logger.go:46  Got compaction priority: {level:0 score:1.73 dropPrefix:[]}
 2020-07-01T14:30:42.053+0800    INFO    badger  v2@v2.0.3/logger.go:46  Got compaction priority: {level:0 score:1.73 dropPrefix:[]}
 2020-07-01T14:30:42.054+0800    INFO    main    lotus-storage-miner/init.go:252 Storage miner successfully created, you can now start it with 'lotus-storage-miner run'
+```
 
-
-
----
-普通节点32G的初始化：
-
-
+#### 普通节点32G的初始化：
+```
 [fil@yangzhou010010010239 ~]$ ./lotus-storage-miner init --nosync --sector-size=34359738368 --owner=t3rezszdwh4md6wz2qtmkmst27yv2uqtplid4uwxkbvhnj2itqu7wof6xu3qmk2zvrfunerqnbkqzk3zbgw6vq
 2020-07-01T14:47:57.593+0800    INFO    main    lotus-storage-miner/init.go:110 Initializing lotus storage miner
 2020-07-01T14:47:57.594+0800    INFO    main    lotus-storage-miner/init.go:130 Checking proof parameters
@@ -165,7 +163,8 @@ $ ./lotus-storage-miner init --genesis-miner --actor=t01000 --sector-size=838860
 ```
 
 
-创世节点没有set-default ， 再给其他转账时， 会有这个错误：   failed to get default key:
+#### 创世节点没有set-default ， 再给其他转账时， 会有这个错误：   failed to get default key:
+```
 [fil@yangzhou010010010206 ~]$ ./lotus send t3rk6hjm5rzxbtylncoebgxsjhlqgwnsht6yuv6jgyztvjklxx54alxbpbm7nvegcxnx7z5nhukrgia4pwje7a 500
 2020-07-06T10:37:44.827+0800    WARN    main    lotus/main.go:81        failed to get default key: opening key 'default': key info not found
 [fil@yangzhou010010010206 ~]$ ./lotus wallet list
@@ -174,3 +173,4 @@ t3wgrstxjeppeag2y4gtylhxevrskohtp77ryat2667mg5bqwjtcsjlvgdloqk4i27jrg4yy7e2peron
 [fil@yangzhou010010010206 ~]$ 
 [fil@yangzhou010010010206 ~]$ ./lotus send t3rk6hjm5rzxbtylncoebgxsjhlqgwnsht6yuv6jgyztvjklxx54alxbpbm7nvegcxnx7z5nhukrgia4pwje7a 500
 bafy2bzaceb6swy6l6fxm3duo2ktsrlnrhy6tvd6sgogtqbtldzni2lkuqtrtw
+```
