--- a/区块链/命令汇集.md
+++ b/区块链/命令汇集.md
@@ -26,6 +26,7 @@ $ cat config.json
 ```
 $ cat config.toml
 scheduler_url = "http://10.10.19.17:3456"
+seal_commit_phase1_output = "/sealer/p3cache"
 local_dir = "/sealer"
 copy_limit_mb_per_sec = 500
 group_id= [1]
