--- a/区块链/服务地址汇总.md
+++ b/区块链/服务地址汇总.md
@@ -125,7 +125,6 @@ vip 两个陪跑。
 lotus-server发信号量， 而故障是被动的 
 message 对sealer无感的， 用到的时候重链， 最终目的， 在非常短的时间 重链。 
 
-
 lotus-server 负载均衡， lotus-server运行在k8s里
 nginx , 模拟发送大量的请求， 看lotus-sever成熟的压力怎么样，兵法写数据
 
@@ -149,8 +148,8 @@ nonce
 
 消息的院子性由数据库保证
 
-产生的消息没发到链上， 
----
+产生的消息没发到链上
+
 #### 模拟坏盘的情况
 
 目前能预测的问题， 
@@ -207,15 +206,10 @@ sector 到哪个deadline .
 windowpost完成时间， 32G 40分钟就够了
 
 
-
 ### 不同主机之间文件拷贝
 ```
 [root@yangzhou010010001015 20200612]# scp -rpP 62534 * 10.10.19.17:/home/fil
 ```
-
-
-
-
 
 对标
 边缘覆盖
@@ -225,9 +219,10 @@ windowpost完成时间， 32G 40分钟就够了
 ssh -p 62534 root@222.189.237.2
 
 从跳板机登陆到分配给自己的主机地址
+```
 [fil@yangzhou010010001015 ~]$ ssh -p 62534 10.10.19.17
 Last login: Sat Jun 13 17:47:31 2020
-
+```
 ### 数据库
 #### 连接1
 数据库地址：
