--- a/区块链/命令汇集.md
+++ b/区块链/命令汇集.md
@@ -1,5 +1,6 @@
-### 配置文件
 
+[TOC]
+### 配置文件
 #### server 的配置
 ```
 $ cat config.json
@@ -22,7 +23,7 @@ $ cat config.json
 ```
 
 #### worker的配置
-32G 和512 的worker config, 除了sectorsize不一样，其他一样
+32G 和512 的config.toml, 除了sectorsize不一样，其他一样
 ```
 $ cat config.toml
 scheduler_url = "http://10.10.19.17:3456"
@@ -44,21 +45,12 @@ supported_phase = ["CopyTask","CleanTask"]
 wait_sec = 60
 ```
 
-###  命令的环境变量
-forcework 设置项： 
-512M的FIL_PROOFS_MAXIMIZE_CACHING=false
-32G的FIL_PROOFS_MAXIMIZE_CACHING为 1 或者 true
-
-单位：
+ 
+### 创世节点搭建
 8M=8388608
 512M=536870912
 32G=34359738368
-34359738368
 
-FIL_PROOFS_MAXIMIZE_CACHING=true FIL_PROOFS_ALLOW_GENERATING_GROTH=1 RUST_LOG=trace BELLMAN_PROOF_THREADS=3 RUST_BACKTRACE=1 nohup ./force-remote-worker > force-remote-worker.log 2>&1 &    
- 
- 
-### 创世节点
 ```
 ./lotus fetch-params  8388608
 ./lotus-seed pre-seal --sector-size  8388608  --num-sectors 5
@@ -101,7 +93,7 @@ Head:           bafy2bzacedhvunyze3fak2sfb7gnkpdn42ya4glnrlrgziifbenudxg4koj56
 初始化必须在链同步之后， 因为初始化要拿链上的信息
 ```
 owner 是t3的初始化, 耗时5分钟
-./lotus-storage-miner init --nosync --sector-size=536870912 --owner=t3qr64ae6azjwqewl5ivsyy7dvw73evaerkkiipavd3uqwyz7ybmpp2nxmbfr6r5jgrifmwjq2hnvsclgdpwma
+./lotus-storage-miner init --nosync --sector-size=34359738368 --owner=t3qr64ae6azjwqewl5ivsyy7dvw73evaerkkiipavd3uqwyz7ybmpp2nxmbfr6r5jgrifmwjq2hnvsclgdpwma
 
 ownee是t0的初始化  这个步骤是非常快的
 ./lotus-storage-miner init  --nosync --owner=t01002
@@ -112,29 +104,53 @@ ownee是t0的初始化  这个步骤是非常快的
 ```
 nohup ./lotus-server >lotus-server.log 2>&1 &
 第二次启动lotus
-nohup ./lotus daemon --server-api=http://10.10.10.207:3456 --bootstrap=false --api 11234 > lotus.log 2>&1 &
+nohup ./lotus daemon --server-api=http://10.10.28.218:3456 --bootstrap=false --api 11234 > lotus.log 2>&1 &
 ```
 
-#### poster 
+#### poster启动
 ```
 nohup ./lotus-storage-miner run --mode=poster --server-api=http://10.10.10.207:3456 --dist-path=/mnt --nosync > poster.log 2>&1 &
 ```
 
-针对worker耗时不同而用的sealer不同启动方式
-32G的sealer和worker
+#### sealer启动
 ```
-HACK_P1=1   FIL_PROOFS_MAXIMIZE_CACHING=1  FIL_PROOFS_NUMS_OF_PARTITION_HACK=4  FIL_PROOFS_USE_FULL_GROTH_PARAMS=true  BELLMAN_PROOF_THREADS=8  RUST_LOG=debug  RUST_BACKTRACE=full   nohup ./force-remote-worker >> logs/force-remote-worker.log 2>&1 &
-FORCE_BUILDER_P1_WORKERS=1  FORCE_BUILDER_TASK_DELAY=1h  FORCE_BUILDER_AUTO_PLEDGE_INTERVAL=10  TRUST_PARAMS=1 RUST_LOG=info RUST_BACKTRACE=1  FORCE_BUILDER_PLEDGE_TASK_TOTAL_NUM=1 nohup ./lotus-storage-miner run     --mode=remote-sealer --server-api=http://10.10.10.239:3456 --dist-path=/mnt  --nosync   --groups=1 > logs/sealer.log 2>&1 &
-```
-
-512M的sealer和worker
-```
-FIL_PROOFS_MAXIMIZE_CACHING=false FIL_PROOFS_ALLOW_GENERATING_GROTH=1 RUST_LOG=debug BELLMAN_PROOF_THREADS=3 RUST_BACKTRACE=1 nohup ./force-remote-worker > force-remote-worker.log 2>&1 &
 FORCE_BUILDER_P1_WORKERS=28 FORCE_BUILDER_TASK_DELAY=1s FORCE_BUILDER_AUTO_PLEDGE_INTERVAL=1 TRUST_PARAMS=1 RUST_LOG=info RUST_BACKTRACE=1 FORCE_BUILDER_PLEDGE_TASK_TOTAL_NUM=56 nohup ./lotus-storage-miner run --mode=remote-sealer --server-api=http://10.10.10.207:3456 --dist-path=/mnt --nosync --groups=1 > ./sealer.log 2>&1 &
 ```
 
-### 同步命令
-#### ansible
+针对512M 和32G worker耗时和占用硬盘空间不同, sealer的FORCE_BUILDER_P1_WORKERS， FORCE_BUILDER_PLEDGE_TASK_TOTAL_NUM有所不同， FORCE_HUGE_PAGE=1 启用巨页内存
+
+
+#### 巨页内存
+
+```   
+cat /proc/meminfo | grep HugePages_Total
+# 或者
+cat /proc/sys/vm/nr_hugepages
+```
+如果巨页数量为 0 ，则说明巨页没有启用。
+
+
+#### worker启动
+512M的worker启动
+```
+FIL_PROOFS_MAXIMIZE_CACHING=false FIL_PROOFS_ALLOW_GENERATING_GROTH=1 RUST_LOG=debug BELLMAN_PROOF_THREADS=3 RUST_BACKTRACE=1 nohup ./force-remote-worker > force-remote-worker.log 2>&1 &
+```
+
+32G的worker启动
+```
+FIL_PROOFS_MAXIMIZE_CACHING=true FIL_PROOFS_ALLOW_GENERATING_GROTH=1 RUST_LOG=trace BELLMAN_PROOF_THREADS=3 RUST_BACKTRACE=1 nohup ./force-remote-worker > force-remote-worker.log 2>&1 &    
+```
+
+### 常用命令
+#### 文件查看, 如果文件有增加， 可以即时看到：
+```
+tail -100f lotus-server.log
+```
+#### 挂载文件系统
+```
+mount -t nfs -o hard,nolock,rw,user,rsize=1048576,wsize=1048576,vers=3 10.10.13.22:/mnt/storage  /mnt/
+```
+#### 集群同步ansible
 ```
 ansible-playbook -i hosts-storage-6-22 test.yml -f 30
 
@@ -147,51 +163,68 @@ ansible ligang -m copy -a "src=/home/cmd/config.toml dest=/home/fil/ owner=fil g
 ansible yz-0-19  -m shell -a "mount -t nfs -o hard,nolock,rw,user,rsize=1048576,wsize=1048576,vers=3 10.10.7.31:/sealer   /sealer"
 
 ansible ligang -m copy -a "src=/home/cmd/config.toml dest=/home/fil/ owner=fil group=fil"
+
+ansible "$group" -m shell -a "ps aux | grep force | grep -v grep"
+
+ansible "$group" -m shell -a "grep supported /root/config.toml"
+
+ansible "$group" -m shell -a "free -h"
+
+ansible "$group" -m shell -a "df -h /mnt/cpfs"
 ```
 
-加入一个机会组：10多台机器。 :
+加入一个机会组：10多台机器:
 ```
 # vi /etc/ansible/hosts
 ```
 
-#### scp
-### 数据库
+#### 单机同步scp
+mac 上拷贝到跳板机：
+```
+scp -rpP 54073 -i ~/.ssh/id_rsa。 forcenet.zip root@103.78.229.68:/home/zhenglun/version/
+```
+-r： 递归复制整个目录
+-p： 保留原文件的修改时间，访问时间和访问权限。
+-P:  注意是大写的P, 指定数据传输用到的端口号
+-i:  identity_file： 从指定文件中读取传输时使用的密钥文件，此参数直接传递给ssh。
+
+
+#### 数据库连通性
 mysql -uroot -pIpfs@123ky
 mysql> create database `lotus17a` ；
 mysql> exit 
 
-### linux基本命令：
-
-文件系统：
-mount -t nfs -o hard,nolock,rw,user,rsize=1048576,wsize=1048576,vers=3 10.10.13.22:/mnt/storage  /mnt/
-
-文件查看：
-tail -100f lotus-server.log
-
-版本查看
+#### 版本查看
 ```
-[root@yangzhou010010019017 ~]# cat /etc/redhat-release
+# cat /etc/redhat-release
 CentOS Linux release 7.6.1810 (Core)
 
-md5sum 文件名
+# md5sum 文件名
 ``` 
 
-配置查看
+####  查看lotus-sserver版本
 ```
-[fil@yangzhou010010001015 ~]$ cat /proc/cpuinfo| grep "cpu cores"| uniq
+[fil@yangzhou010010011031 ~]$ curl localhost:3456/build-version
+"match-lotus-0.2.7-2020-07-06_04:27:21PM-c510257e591e2ba2f55b9205cacbc0a5de627701"
+```
+
+#### 配置查看
+```
+$ cat /proc/cpuinfo| grep "cpu cores"| uniq
 cpu cores	: 10
-[fil@yangzhou010010001015 ~]$ grep MemTotal /proc/meminfo
+
+$ grep MemTotal /proc/meminfo
 MemTotal:       32818656 kB
 
 free -h 
 ```
 
-文件大小查看
+#### 文件大小查看
 ```
 du -sch *
 ```
 
-进程查看
+####  进程查看
 只查看本用户启动的进程
 ps -x
 查看所有进程
