--- a/区块链/存储服务器.md
+++ b/区块链/存储服务器.md
@@ -1,6 +1,3 @@
-
-
-
 ### p1 p2 p3 p4 挂载/sealer. pc(包括p5 p6)挂载/sealer 和 /mnt
 
 #### 1.  /sealer: 存放中间数据，worker所在的所有节点主机都要有这个挂载目录 
@@ -49,7 +46,120 @@ Pc所在节点主机的 /mnt 是真正存放封装好的sector地方, 如：
 /mnt是绝对不可以删除的。 
 
 
-一般将pc 与p1 放在同一个主机节点下，
+一般将pc 与p1 放在同一个主机节点下.
+
+
+
+## lotus-server启动前的准备 
+
+### nfs挂载点的准备
+##### 检查所有挂载点：
+```
+root@yangzhou010010019017 fil]# df -h
+文件系统        容量  已用  可用 已用% 挂载点
+/dev/sda2       2.0T   93G  2.0T    5% /
+devtmpfs         63G     0   63G    0% /dev
+tmpfs            63G     0   63G    0% /dev/shm
+tmpfs            63G  818M   63G    2% /run
+tmpfs            63G     0   63G    0% /sys/fs/cgroup
+/dev/sda1      1014M  127M  888M   13% /boot
+tmpfs            63G   12K   63G    1% /var/lib/kubelet/pods/62e5b3d7-53a8-4e6f-ac34-ab536be25ea2/volumes/kubernetes.io~secret/default-token-jbj6d
+overlay         2.0T   93G  2.0T    5% /var/lib/docker/overlay2/113ad712394904013f5c02216d0d8debd465bb1cfc102511864d76ccb7c3606a/merged
+shm              64M     0   64M    0% /var/lib/docker/containers/d78cd26c6125ba04748c4201e38fec61decb56699282bc3c4953d0b100acf34b/mounts/shm
+overlay         2.0T   93G  2.0T    5% /var/lib/docker/overlay2/6a223d4ff6930ff19317e4ed5dbfc3460a300657e228a307cd0118719f65c76b/merged
+tmpfs            13G     0   13G    0% /run/user/0
+tmpfs            63G   12K   63G    1% /var/lib/kubelet/pods/96595a99-28af-41b4-a28c-1ed683e57575/volumes/kubernetes.io~secret/default-token-62shh
+overlay         2.0T   93G  2.0T    5% /var/lib/docker/overlay2/118a85960d400fd1c4213ce17ddc821839b2f15d89fa13d38c245294423ac502/merged
+shm              64M     0   64M    0% /var/lib/docker/containers/5717cf2b70e20b83dbcf68f297bfc1392011b3b58d0f57c0a973f1f86aa34599/mounts/shm
+overlay         2.0T   93G  2.0T    5% /var/lib/docker/overlay2/95cb42c1924211e42bde298635caa68862c9589404abe07022e2ab002535e7cf/merged
+```
+
+#####  挂载nfs文件系统
+```
+[root@yangzhou010010019017 ~]# mount -t nfs -o hard,nolock,rw,user,rsize=1048576,wsize=1048576,vers=3 10.10.4.23:/mnt/storage  /mnt/nfs/10.10.4.23
+
+
+10.10.4.23:/mnt/storage 表示 在10.10.4.23地址的主机上的 /mnt/storage挂载的文件系统
+```
+
+若要开机挂载， 就在rc.local中加：
+```
+root@yangzhou010010019017 ~]# cat /etc/rc.local
+```
+
+新部署：
+```
+root@yangzhou010010011039 mnt]# mount -t nfs -o hard,nolock,rw,user,rsize=1048576,wsize=1048576,vers=3 10.10.13.22:/mnt/storage  /mnt/
+```
+这里挂载了10.10.13.22主机的文件系统， 那么storage-nodes和groups表中的ip也要改变， 即：
+storage-nodes表改为：
+1	10.10.13.22	1	10.10.13.22	10.10.1.11
+
+groups表改为：
+1	10.10.13.22	10.10.13.22
+
+这个表的信息要被sealer 和poster 读取，确定存放数据的地方。 
+
+
+
+##### 查看新的挂载点
+```
+[root@yangzhou010010019017 mnt]# df -h
+文件系统                 容量  已用  可用 已用% 挂载点
+/dev/sda2                2.0T   93G  2.0T    5% /
+devtmpfs                  63G     0   63G    0% /dev
+tmpfs                     63G     0   63G    0% /dev/shm
+{
+tmpfs                     63G  818M   63G    2% /run
+tmpfs                     63G     0   63G    0% /sys/fs/cgroup
+/dev/sda1               1014M  127M  888M   13% /boot
+tmpfs                     63G   12K   63G    1% /var/lib/kubelet/pods/62e5b3d7-53a8-4e6f-ac34-ab536be25ea2/volumes/kubernetes.io~secret/default-token-jbj6d
+overlay                  2.0T   93G  2.0T    5% /var/lib/docker/overlay2/113ad712394904013f5c02216d0d8debd465bb1cfc102511864d76ccb7c3606a/merged
+shm                       64M     0   64M    0% /var/lib/docker/containers/d78cd26c6125ba04748c4201e38fec61decb56699282bc3c4953d0b100acf34b/mounts/shm
+overlay                  2.0T   93G  2.0T    5% /var/lib/docker/overlay2/6a223d4ff6930ff19317e4ed5dbfc3460a300657e228a307cd0118719f65c76b/merged
+tmpfs                     13G     0   13G    0% /run/user/0
+tmpfs                     63G   12K   63G    1% /var/lib/kubelet/pods/96595a99-28af-41b4-a28c-1ed683e57575/volumes/kubernetes.io~secret/default-token-62shh
+overlay                  2.0T   93G  2.0T    5% /var/lib/docker/overlay2/118a85960d400fd1c4213ce17ddc821839b2f15d89fa13d38c245294423ac502/merged
+shm                       64M     0   64M    0% /var/lib/docker/containers/5717cf2b70e20b83dbcf68f297bfc1392011b3b58d0f57c0a973f1f86aa34599/mounts/shm
+overlay                  2.0T   93G  2.0T    5% /var/lib/docker/overlay2/95cb42c1924211e42bde298635caa68862c9589404abe07022e2ab002535e7cf/merged
+10.10.4.23:/mnt/storage  160T  273G  152T    1% /mnt/nfs/10.10.4.23
+```
+
+出现了10.10.4.23:/mnt/storage  160T  273G  152T    1% /mnt/nfs/10.10.4.23
+说明10.10.4.23存储服务器的/mnt/storage已经成功挂载到当前主机的/mnt/nfs目录下
+
+到挂在点下的目录，看有无内容
+```
+[root@yangzhou010010019017 mnt]# cd nfs/10.10.4.23/
+[root@yangzhou010010019017 10.10.4.23]# ll
+总用量 40
+drwxrwxr-x 537 fil fil 20480 6月  13 14:00 cache
+drwxrwxr-x   2 fil fil 20480 6月  13 14:00 sealed
+```
+
+
+#####  递归改变nfs目录下所有文件的属主
+```
+[root@yangzhou010010019017 mnt]# chown -R fil:fil nfs
+[root@yangzhou010010019017 mnt]# chmod -R 777 nfs/
+```
+
+#### sealed 存放最后计算出的区块：
+矿工号为t02481， lotus全部过程搭建好后， 可以在sealed看到所有矿工计算出的区块， 区块的编号由矿工号和任务号拼接成
+
+```
+[fil@yangzhou010010019017 sealed]$ pwd
+/mnt/nfs/10.10.4.23/sealed
+fil@yangzhou010010019017 sealed]$ ll | grep 2481
+-rw-rw-r-- 1 fil fil 536870912 Jun 13 18:17 s-t02481-3000
+-rw-rw-r-- 1 fil fil 536870912 Jun 13 19:43 s-t02481-3002
+-rw-rw-r-- 1 fil fil 536870912 Jun 13 19:43 s-t02481-3003
+-rw-rw-r-- 1 fil fil 536870912 Jun 13 23:42 s-t02481-3004
+-rw-rw-r-- 1 fil fil 536870912 Jun 14 00:01 s-t02481-3005
+-rw-rw-r-- 1 fil fil 536870912 Jun 14 13:40 s-t02481-3006
+-rw-rw-r-- 1 fil fil 536870912 Jun 14 13:40 s-t02481-3007
+-rw-rw-r-- 1 fil fil 536870912 Jun 14 15:11 s-t02481-3008
+```
 
 ### focefs   
 裸磁盘存储服务器， 有一个专门的代理进程， 让外部感知为 实现文件系统
