--- a/区块链/当天问题.md
+++ b/区块链/当天问题.md
@@ -1,4 +1,44 @@
-#### config没有填， 导致sealer 报错， 导致sector长时间停在commiting
+####   链高度不动的因素
+sealer重启 ， 需要重连创世节点吗
+
+
+####  谁会影响到出块
+
+32G。的消息需要多少费用， 500fil 都不够吗
+不出块, P4 任务发布出来
+创世节点
+commitonchain。正情情况， 重启sealer就会解决， 先在没解决， 原因是什么
+commitonchain 的状态没法变更，  是读.lotusstorage下面的， 不能手动变更， 会堵住sealer发任务
+一个创世节点， 应该有多个矿工， 不能指望创世矿工 ， 创世矿工的算力非常少， 而算力大的矿工， 又不出块， 
+没有消息， 也能出块吗， 出块的条件是什么 ， 为什么算力大的矿工也不出块。 
+如何获取命令的返回结果， 这样才可以自动化
+
+
+
+#### 有时进程没彻底关闭干净， 端口还在占用
+```
+[fil@allinone ~]$ ps aux | grep lotus
+root     15318  0.0  0.0 1191032 27676 ?       Sl   13:48   0:02 ./lotus-server
+fil      19380  0.0  0.0 112812   972 pts/2    S+   21:53   0:00 grep --color=auto lotus
+[fil@allinone ~]$ exit
+logout
+[root@allinone fil]#  ps aux | grep lotus
+root     15318  0.0  0.0 1191032 27676 ?       Sl   13:48   0:02 ./lotus-server
+root     19402  0.0  0.0 112828   976 pts/2    S+   21:53   0:00 grep --color=auto lotus
+[root@allinone fil]# netstat -antp | grep 1234
+tcp        0      0 0.0.0.0:11234           0.0.0.0:*               LISTEN      23004/5
+tcp        0      0 127.0.0.1:51382         127.0.0.1:11234         ESTABLISHED 3194/5
+tcp        0      0 127.0.0.1:11234         127.0.0.1:45002         ESTABLISHED 23004/5
+tcp        0      0 127.0.0.1:44998         127.0.0.1:11234         ESTABLISHED 24367/5
+tcp        0      0 127.0.0.1:11234         127.0.0.1:51382         ESTABLISHED 23004/5
+tcp        0      0 127.0.0.1:11234         127.0.0.1:44998         ESTABLISHED 23004/5
+tcp        0      0 127.0.0.1:11234         127.0.0.1:51386         ESTABLISHED 23004/5
+tcp        0      0 127.0.0.1:51386         127.0.0.1:11234         ESTABLISHED 3194/5
+tcp        0      0 127.0.0.1:45002         127.0.0.1:11234         ESTABLISHED 24367/5
+```
+
+
+#### fconfig表没有填好， 导致sealer 报错， 导致sector长时间停在commiting
 sealer.log 报错log:
 ```
 2020-07-07T08:55:33.394+0800    ./floader ./lotus[0m        fconfig config/force_param.go:65        record not found
@@ -37,10 +77,20 @@ FORCE_BUILDER_AUTO_PLEDGE_INTERVAL=10 每个10秒发一次任务，
 FORCE_BUILDER_P1_WORKERS=设置的过大， 连续发10个， P1很多，而P1做的时间又很长，就先做P1了， 导致没时间做P2
  
 #### sealer重发任务
-result-status 2， 手动设置为1， 就会触发sealer就会重发这个任务， sealer每隔1分钟检查表， 对result-status=1的任务记录做如下动作：
+重发条件是finished为1， result=status也为1。 手动改为1， 就可以重发任务。 
+
+当finished 为1时， result-status 2，  手动设置为1，  就会触发sealer就会重发这个任务， sealer每隔1分钟检查表， 对result-status=1的任务记录做如下动作：
 更新这个记录，将is-finished, is_taken设置为0，  err-msg晴空， 
 
 因为is_taken变成了1， worker查询时， 就会领这个任务， 把is_taken设置为1 
+
+
+### tasks表的workerid
+workid 是为 了重启worker时， 找到之前的worker. 
+但是重发任务就会清除这个表。 
+
+### 
+sealer 向sector表更新状态， 但是sealer挂了， sector的状态就还是之前的， 不会反应到数据库
 
 
 #### P1 在 第二轮 可以省去的时间： 
