--- a/区块链/服务地址汇总.md
+++ b/区块链/服务地址汇总.md
@@ -321,7 +321,6 @@ cd /home/forcepool/backend-user/code/logs
 
 ```
 
-
 #### 后端服务部署
 redis 用aws云服务商， 东京一个， 伦敦备用一个
 
@@ -337,7 +336,6 @@ https://interopnet.filscan.io/#/
 https://filfox.io/
 
 https://stats.testnet.filecoin.io/d/3j4oi32ore0rfjos/chain-internal?orgId=1&refresh=45s
-
 
 开发组， 
 项目组
@@ -390,23 +388,38 @@ fsjsjsjx1
 
 ### 代码提交
 ```
-git push origin feature/codeservice
+git clone git@gitlab.forceup.in:ForcePool/UserBackend.git
 
+git branch -a
+remotes/origin/HEAD -> origin/master
+remotes/origin/bugfix_change_phone_number_limit
+remotes/origin/change_sms_provider_hotfix
+remotes/origin/f/leaveUserAPI
+remotes/origin/feat/limit_sms_email_verified_code
+remotes/origin/feature/authImgUpload
+remotes/origin/feature/codeservice
+remotes/origin/fix/userInfoChange
+remotes/origin/limit-3-elements
+remotes/origin/master
+remotes/origin/sms_email_alert
+remotes/origin/test
+remotes/origin/test.perfect-speration
+
+切出一个本地分支：
+git checkout remotes/origin/feature/codeservice -b feature/codeservice
+
+
+
+同步远程test分支到本地当前分支feature/codeservice
 $ git fetch origin
-LdeMacBook-Pro:UserBackend zhenglun1$ git merge origin/test
-Updating 4ee2147..1fc6361
-error: Your local changes to the following files would be overwritten by merge:
-	go.mokd
-Please commit your changes or stash them before you merge.
-Aborting
 
-LdeMacBook-Pro:UserBackend zhenglun1$ git checkout -f .
-Updated 1 path from the index
+$ git merge origin/test
 
-LdeMacBook-Pro:UserBackend zhenglun1$ git merge origin/test
-Updating 4ee2147..1fc6361
-Fast-forwardco
- api/types/request.go            |   4 +
-
+将本地当前分支推送到远程分之feature/codeservice
 git push origin feature/codeservice
+
+网页上merge request:
+将feature/codesevice的提交merge到test分支
+
+
 ```
