--- a/区块链/链同步排查.md
+++ b/区块链/链同步排查.md
@@ -29,7 +29,7 @@ worker 2:
 	Height: 0
 ```
 
-#### 
+#### 到同步正常的链查这个块
 
 到创世节点查这个块
 ```
@@ -95,12 +95,13 @@ $ ./lotus chain getblock bafy2bzaceajf7hvn4w7stcnljza2ojpkqxym3rbab37zhj7ksahwbp
     }
   ]
 }
+```
+找到了这个块的parenet消息为bafy2bzaceay3i5qdnbqjgh4bkn6jry2m7blhl66icunbyiewesrlrvip4y5x4
 
-$ ./lotus state search-msg bafy2bzaceay3i5qdnbqjgh4bkn6jry2m7blhl66icunbyiewesrlrvip4y5x4
-message was executed in tipset: [bafy2bzaceajf7hvn4w7stcnljza2ojpkqxym3rbab37zhj7ksahwbpc3c43yc]
-Exit Code: 0
-Gas Used: 5138
 
+
+#### 去链上找这个parent消息的具体内容
+```
 $ ./lotus chain  getmessage bafy2bzaceay3i5qdnbqjgh4bkn6jry2m7blhl66icunbyiewesrlrvip4y5x4
 {
   "Version": 0,
@@ -113,15 +114,51 @@ $ ./lotus chain  getmessage bafy2bzaceay3i5qdnbqjgh4bkn6jry2m7blhl66icunbyiewesr
   "Method": 2,
   "Params": "hVgxA4LuowwQ0IMT3p4AGwUPGbaM8tXDZyaaYqCEgXwabPi+wmdbbFgjOoDS/+jMKEHUzlgxA4LuowwQ0IMT3p4AGwUPGbaM8tXDZyaaYqCEgXwabPi+wmdbbFgjOoDS/+jMKEHUzgNYJgAkCAESINwJy1WyhYgruGf1j9fwMQNjNYqVEOmwwk2B8mn+8g6ogA=="
 }
+```
+可以顺便看下这个消息的手续费用， 这个不是排查的必须步骤
+```
+$ ./lotus state search-msg bafy2bzaceay3i5qdnbqjgh4bkn6jry2m7blhl66icunbyiewesrlrvip4y5x4
+message was executed in tipset: [bafy2bzaceajf7hvn4w7stcnljza2ojpkqxym3rbab37zhj7ksahwbpc3c43yc]
+Exit Code: 0
+Gas Used: 5138
 ```  
 
-####
+
+
+
+
+####  矿工的版本不支持链上的size, 就无法链同步
 每个矿工的lotus版本必须能支持连上所有矿工的size, 比如一个链上有不同矿工的size 有8m, 512M , 32G.
 按么每个矿工的lotus版本必须同时支持8M，512M， 32G。 假如一个矿工的lotus版本如果只支持512M，那么就不能进行链同步。
 会包这样的错误：
-
-
-
+````
+[fil@yangzhou010010011031 ~]$ ./lotus sync status
+sync status:
+worker 0:
+	Base:	[bafy2bzacealyyvv63amap73yym3zbfbl2i27opdyey5j5r4ijsjglqyhjpwra]
+	Target:	[bafy2bzacebg566mparunau6vi4ycx7vctg7rljk2clx7vp5y73m64ryu7u6mw] (4339)
+	Height diff:	4339
+	Stage: error
+	Height: 289
+	Elapsed: 10.662760811s
+	Error: collectChain syncMessages: message processing failed: 
+validating block bafy2bzaceajf7hvn4w7stcnljza2ojpkqxym3rbab37zhj7ksahwbpc3c43yc: 
+parent state root did not match computed state 
+(bafy2bzacedbavikah3jt7gxb7kk2wmw63lfg3ejtzxegtcahltngq4pv6wpbi != 
+bafy2bzacecrpjxo4znu6zjmqammvlmc6nkkpugvol2euwxglfz3hyuntzecaw)
+worker 1:
+	Base:	[]
+	Target:	[] (0)
+	Height diff:	0
+	Stage: <unknown: 0>
+	Height: 0
+worker 2:
+	Base:	[]
+	Target:	[] (0)
+	Height diff:	0
+	Stage: <unknown: 0>
+	Height: 0
+```
 #### 查看链上各矿工的size
 ```
 $ ./lotus state list-miners
