--- a/Golang/理解接口.md
+++ b/Golang/理解接口.md
@@ -1,4 +1,4 @@
-空接口是指针还是实例的判断方法：
+### 空接口是指针还是实例的判断方法：
 空接口变量可以个指针, 也可以是个实例，判断方位为：
 看这个接口变量赋值时, 右边是地址 ,还是地址的实例
 如：
@@ -15,14 +15,14 @@ var p interface{}
 此时p就是指针,  要想修改实例里成员的值, 要转的目的类型必须是指针类型：
 p.(*datatype).i = 1
 
----
-interface底层实现：
+
+### interface底层实现：
 根据接口内部是否有方法，其底层类型也是不同的。
 接口有两种底层类型:
 内部无方法的, 就是iface类型, 其_type在iface->tab->_type
 内部有方法的, 就是eface类型, 其_type在eface->_type
 eface 类型和iface 类型都在src/runtime/runtime2.go定义
-
+```
 type iface struct {
 	tab  *itab
 	data unsafe.Pointer
@@ -49,8 +49,9 @@ type _type struct {
 	str       nameOff
 	ptrToThis typeOff
 }
-
+```
 相等的条件是_type和data都要想等，举个例子：
+```
 	var a interface{}
 	var d Human
 	fmt.Println("not assign a d:", a==d)
@@ -61,19 +62,22 @@ type _type struct {
 		虽然a是eface类型, d是iface类型,
 		但a, d比较时, 使用他们的_type和data成员比较的, 都为nil, 所以相等
 	*/
-
+```
 形参是接口时， 接受的实参可以是对象， 也可以是指针。 
 参数类型不确定时， 用接口做形参是普遍的做法
 接口本身是一个指针， 所以
+```
 var i interface{}
 i := &S{}
+```
 也是通用写法。 
 所以如果用接口指针， 就是双重指针， 
 所以如果形参为接口指针，那么传入参数如果是一重指针传入，就会语法错误
 
 
-----
-接口的断言：
+
+### 接口的断言：
+```
 var t1 interface{} = 2
 v, ok := t1.(int)
 if ok {
@@ -98,3 +102,4 @@ func main() {
 		        fmt.Println("unknown type:", v)
 	}
 }
+```
