--- a/区块链/命令提示.md
+++ b/区块链/命令提示.md
@@ -1,11 +1,11 @@
-
-
-
-
+[TOC]
 #### 版本查看
+```
 $ ./lotus -v
     lotus version 0.4.1+git.a34c4950c
-    a34c4950c 是提交号， 可以到git 上看到对应那个提交
+```
+
+a34c4950c 是提交号， 可以到git 上看到对应那个提交
 ### state 
 ```
 $ ./lotus state
@@ -45,6 +45,7 @@ OPTIONS:
    --help, -h      show help (default: false)
    --version, -v   print the version (default: false)
 ```
+
 #### list-messages
 ```
 $ ./lotus state list-messages
