--- a/区块链/问题排查.md
+++ b/区块链/问题排查.md
@@ -1,10 +1,13 @@
+### 解决不能链同步不上的问题：
+回退10个高度， 重新出块
+
 ### 看好当前操作的主机
 
 * 确认当前节点链到那个链上, testnet是公链， 本不应该删， 还是删了。
 
 * 搭建lotus-message 
 
-* dev.gen错误， .lotus nec connect  显示success, 但peers里没有
+* dev.gen错误， .lotus net connect  显示success, 但peers里没有
 
 * 建立一个存放所有命令的文本
 
@@ -16,6 +19,10 @@
 
 * poster.log搜索mined , 可以看到
 new block表示尝试出块， 有info, 没有warn， 才是出块成功。 
+
+* 只有创世节点的链跟上时间了， 其他节点才能同步上
+
+* 开始部署系统系统前， 先ll -a, ps aux 确定系统是干净的
 
 
 ```
