--- a/Golang/理解接口.md
+++ b/Golang/理解接口.md
@@ -1,11 +1,14 @@
+[TOC]
 ### 空接口是指针还是实例的判断方法：
 空接口变量可以个指针, 也可以是个实例，判断方位为：
 看这个接口变量赋值时, 右边是地址 ,还是地址的实例
 如：
+```
 type datatype stuct {
 	i int
 }
 var p interface{}
+```
 两种赋值语句：
 1. p = dataytpe{}   
 此时p就是实例, 在使用时, 要对接口变量做类型转换, 才等得到这个实例. 
