--- a/区块链/当天问题.md
+++ b/区块链/当天问题.md
@@ -1,4 +1,16 @@
 [TOC]
+水龙头 要求10分钟后再申请，
+限制的是wallet, 改ip地址没用
+可以再领十几万
+但是 
+一个消息增加钱数， 会限制大矿工 
+大矿工都没上线
+先出块， 就能产生钱了
+消息的最小费用1631
+一个晚上， 最大矿工才20多T
+
+一次能领20多万的fil
+
 ####   链高度不动的因素
 sealer重启 ， 需要重连创世节点吗
 
