--- a/区块链/问题排查.md
+++ b/区块链/问题排查.md
@@ -1,3 +1,11 @@
+#### 因没钱导致P2发出的消息得不到处理
+公网第一次消息处理， 就是P2发出的消息，消息的费用比较多， 没有足够的钱得不到处理。 
+
+以前一个fil就能出块， 现在看来要98个fil才能上链出块
+![](media/15953798887949.jpg)
+
+
+
 ### 解决不能链同步不上的问题：
 回退10个高度， 重新出块
 
@@ -47,7 +55,21 @@ nohup ./lotus-server >lotus-server.log 2>&1 &
 TRUST_PARAMS=1 RUST_LOG=info RUST_BACKTRACE=1  nohup ./lotus daemon  --server-api=http://10.10.10.239:3456 > lotus.log 2>&1 &
 
 
+你让我说， 我肯定暗着高位出
 
+
+
+模糊写
+
+按小时算， 如果4个小时修好了， 但这个小时就没有算力了
+
+配套用
+
+每个集群配三台
+
+我跟你过过的， 你别老变啊
+你原来能跑， 现在就这么点
+按着标准
 
 ###  /var/tmp/file-profe. 这些证明文件是被P4 使用吗， 
 
