--- a/xiuxing/心得.md
+++ b/xiuxing/心得.md
@@ -3,3 +3,11 @@
 
 
 我们在梦里面会看到一个世界， 也有一个身体， 梦里的这个世界， 不能说只有梦里的这个身体的大脑看到的， 同样， 在这个世界， 也不鞥说这个大脑看到这个世界
+
+
+    眼前这个世界 ， 终究是这个我选择出来的。
+       业力驱动的这个世界， 
+       这个世界是共识下的存在
+       世界顶尖科学家还不解释视觉到底是怎么形成的
+       梦中的我也有一个大脑， 但这个大脑不是本体， 本体不局限在这个身体里面。 
+       西方真实存在， 而且如来慈悲， 給了每一个人可以去的办法
