--- a/区块链/存储服务器.md
+++ b/区块链/存储服务器.md
@@ -1,4 +1,9 @@
 [TOC]
+
+### 优化p1 p2 p4编排  
+p1 p2 存储存到同一个存储， 所以p1 p2 就放在同一个主机上， 这样可以避免走网络， 之前p1 p4 在同一个主机上， 不如p1 p2 在同一台主机上，效果好， 
+
+
 ### p1 p2 p3 p4 挂载/sealer. pc(包括p5 p6)挂载/sealer 和 /mnt
 
 #### 1.  /sealer: 存放中间数据，worker所在的所有节点主机都要有这个挂载目录 
