--- a/区块链/当天问题.md
+++ b/区块链/当天问题.md
@@ -11,6 +11,12 @@
 
 一次能领20多万的fil
 
+### 公链容易遇到的问题
+
+### 私链容易遇到的问题
+
+做软件 ，要看三步， 走一步， 要知道一个动作，后面发生的结果。 要有预测的习惯。 程序还没到，但人已想到。
+
 ####   链高度不动的因素
 sealer重启 ， 需要重连创世节点吗
 
