--- a/区块链/问题排查.md
+++ b/区块链/问题排查.md
@@ -105,7 +105,8 @@ TRUST_PARAMS=1 RUST_LOG=info RUST_BACKTRACE=1  nohup ./lotus daemon  --server-ap
  显示资金不足
  
  链上每条消息的处理， 都需要付费， 一个块上链需要P2 p4两个消息处理 。 
-
+### 要有文字上的东西， 一定要让对方在文字上有明确的对话
+游击队的时代，已经过去了，
 
 ### 怎样加快链同步
 
