--- a/区块链/命令汇集.md
+++ b/区块链/命令汇集.md
@@ -120,7 +120,7 @@ FORCE_BUILDER_P1_WORKERS=28 FORCE_BUILDER_TASK_DELAY=1s FORCE_BUILDER_AUTO_PLEDG
 针对512M 和32G worker耗时和占用硬盘空间不同, sealer的FORCE_BUILDER_P1_WORKERS， FORCE_BUILDER_PLEDGE_TASK_TOTAL_NUM有所不同， FORCE_HUGE_PAGE=1 启用巨页内存
 
 
-#### 巨页内存
+#### 查看巨页内存
 
 ```   
 cat /proc/meminfo | grep HugePages_Total
@@ -239,6 +239,9 @@ du -sch *
 ps -x
 查看所有进程
 ps -ef
+
+
+![-w1474](media/15959153455456.jpg)
 
 
 
