--- a/xiuxing/心得.md
+++ b/xiuxing/心得.md
@@ -11,3 +11,18 @@
        世界顶尖科学家还不解释视觉到底是怎么形成的
        梦中的我也有一个大脑， 但这个大脑不是本体， 本体不局限在这个身体里面。 
        西方真实存在， 而且如来慈悲， 給了每一个人可以去的办法
+       
+       
+       
+离你物理很近的距离， 却是很远的， 因为他一辈子也不会和你说一句话， 终究会各走一方， 互不相见， 所以物理上近距离的， 其实是很遥远， 街上的行人， 同乘的乘客， 同租住的房间， 亲戚， 朋友， 都是越走越远的距离
+而圣人物理距离很远， 但他给后人留下的语言和关切很多， 只要多读圣人的语言， 多实践圣人淳淳教导， 走圣人走过的路， 圣人给了明灯， 与圣人是越走越近的距离， 终有一天，面见圣人， 真诚，亲切的交谈相处
+
+圣人告诉我的应该做到的， 我就努力要做到， 
+圣人告诉我不应该做的， 我就努力不去做。 
+
+为与不为， 与圣人的话相应。
+
+佛是圣人中的圣人， 佛为众生讲法， 也是为我讲法， 佛所说的话即是我前行路上的明灯， 没有光明，路就是黑暗的， 努力也多是无意义的，这也是光明的意义。 
+
+
+ 
