--- a/区块链/代理请求.md
+++ b/区块链/代理请求.md
@@ -43,3 +43,7 @@ http请求， 对同一ip的限制
 
 返回的是一个cid， 
 ![-w1792](media/15961028821833.jpg)
+
+
+转账的消息只有被打包了， 自己才能看到转过来的钱
+![-w1699](media/15964394645663.jpg)
