--- a/区块链/命令汇集.md
+++ b/区块链/命令汇集.md
@@ -64,6 +64,29 @@ nohup ./lotus-storage-miner run --nosync >miner.log 2>&1 &
 ./lotus wallet set-default  t3地址
 ```
 
+新步骤：
+```
+./lotus fetch-params 8388608
+
+./lotus-seed  pre-seal --sector-size 8388608 --num-sectors 5
+
+./lotus-seed  genesis new localnet.json
+
+./lotus-seed  genesis add-miner localnet.json ~/.genesis-sectors/pre-seal-t01000.json
+
+nohup ./lotus --nettype=8M  daemon --lotus-make-genesis=dev.gen --genesis-template=localnet.json --bootstrap=false > lotus.log 2>&1 &
+
+./lotus wallet import ~/.genesis-sectors/pre-seal-t01000.key
+
+./lotus-storage-miner --nettype=8M  init --genesis-miner --actor=t01000 --sector-size=8388608 --pre-sealed-sectors=~/.genesis-sectors --pre-sealed-metadata=~/.genesis-sectors/pre-seal-t01000.json --nosync
+
+./lotus-storage-miner --nettype=8M run --nosync
+```
+
+./lotus fetch-params 2048 下载证明参数文件有错
+![-w1789](media/15962687795729.jpg)
+
+
 ### 私链搭建
 
 #### 启动lotus 
@@ -203,9 +226,16 @@ scp -rpP 54073 -i ~/.ssh/id_rsa。 forcenet.zip root@103.78.229.68:/home/zhenglu
 
 
 #### 数据库连通性
-mysql -uroot -pIpfs@123ky
-mysql> create database `lotus17a` ；
-mysql> exit 
+```
+[root@yangzhou010010019017 fil]# telnet 10.10.19.15 3306
+Trying 10.10.19.15...
+Connected to 10.10.19.15.
+Escape character is '^]'.
+J
+5.7.30
+```
+
+
 
 #### 版本查看
 ```
