--- a/区块链/数据库查看.md
+++ b/区块链/数据库查看.md
@@ -1,8 +1,15 @@
-第一次安装， 查看默认密码：
+### 第一次安装，到/var/log/mysqld.log可以查看到默认密码：
 
 ```
 [root@iZwz94io011c1ib6jqjhjiZ ~]# grep "temporary password" /var/log/mysqld.log
 2020-07-02T10:03:56.504531Z 1 [Note] A temporary password is generated for root@localhost: >og)h9cr2tO0
+```
+
+用获取到的密码， 登陆一下：
+```
+mysql -uroot -p>og)h9cr2tO0
+mysql> create database `lotus17a` ；
+mysql> exit 
 ```
 
 ### MySQL完整复制表到另一个新表
@@ -24,7 +31,7 @@ bond0: flags=5187<UP,BROADCAST,RUNNING,MASTER,MULTICAST>  mtu 1500
         inet 10.10.19.15  netmask 255.255.0.0  broadcast 10.10.255.255
 ```
 
-创建数据库lotus17a
+创建数据库lotus17
 ```
 [root@yangzhou010010019015 ~]# mysql -uroot -pIpfs@123ky
 mysql> create database `lotus17a` ；
