--- a/区块链/消息请求.md
+++ b/区块链/消息请求.md
@@ -146,3 +146,7 @@ pubsub	go-libp2p-pubsub@v0.3.2/validation.go:340	message validation punted; igno
 ![-w747](media/15961897714619.jpg)
  所以官方版本没有这个peer与lotus连接成功的log. 
  
+ 
+#### makeminer add 的 log
+ 
+ ![-w1737](media/15962677352905.jpg)
