--- a/区块链/存储与检索发单.md
+++ b/区块链/存储与检索发单.md
@@ -1,20 +1,41 @@
-#### 使用 10.10.10.21 这个机会
-10.10.11.30
-10.10.11.31
-10.10.11.32
-10.10.11.33
-10.10.11.34
-10.10.11.35
-10.10.11.36
-10.10.11.37
-10.10.11.38
-10.10.11.39
-10.10.11.40
-amd: 
-10.10.10.21  
+### 机器人发单
+必须与机器人地址链接， 才能接到机器人发的单，如：
+```
+./lotus-miner net connect /ip4/104.248.116.108/tcp/34929/p2p/12D3KooWPhWQduBfQkCgExfwvpAQtT5A2VaBTaZ7PuKaFasefcau
+``` 
+
+检查当前矿工是否与机器人链接， 可以到
+https://calibration.spacerace.filecoin.io/check
+检查， 输入矿工号， success  表示链接成功 
+
+#### start-epotch的作用
+到20000这个高度， 如果还没做完， 就以为这个单失败了
+
+
 
 #### 矿工和市场分开
 市场有provider去做， 市场用于接单， 市场放在国外， 矿工放在国内
+
+
+### 本地起一个官方版本的矿工
+```shell
+nohup ./lotus daemon > lotus.log 2>&1 &
+```
+
+初始化一个矿工
+```shell
+./lotus-storage-miner init --actor=t05094 --owner=t3soxlnwaqzv3bn2medqkjujloneyaf272i3bfotxhx3muxoqvcbk5stt7mmkmz4ns4ubx7elrsaqo2fvk4v7a
+```
+
+启动矿工
+```shell
+nohup ./lotus-miner run > poster.log 2>&1 &
+```
+
+做sector任务：
+```
+./lotus-miner sectors pledge
+```
 
 #### 发单
 
@@ -41,6 +62,110 @@ bafyreiggsw6deikkgpiiq4imzxfjpzyyswivsy2nefprrfj7teeur2jxsy
 
 4.看provider的日志
 
+
+### lotus白名单方式同步
+区块同步最好方式：
+lotus以白名单方式启动，找几个同不好区块并且与lotus节点网络通信良好的节点（很重要），加入白名单，启动时加参数--only-white-peer=true，这样这个节点只会从白名单中获取数据。
+示例：
+nohup ./lotus  daemon --bootstrap=true --only-white-peer=true 2>&1 > lt.log &
+白名单添加方式：
+.lotus/config.toml文件中[Libp2p]选项卡下增加，如下所示:
+[Libp2p]
+
+   WhitelistPeers = ["/ip4/192.168.1.221/tcp/45533/p2p/12D3KooWCinLYTPkxpjKcvuFjDKZZrRTf4J8aAFDQTK24rCZXxeV","/ip4/117.48.133.73/tcp/40811/p2p/12D3KooWAgtdgnUJUQ4AdtCbjPJXbCu95GmTDEJ5gnrMyoxM66T4","/ip4/52.116.55.198/tcp/35559/p2p/12D3KooWQDCBo3kVhaabAUs4UWzM9PShN1YupgBHMnPjyrY6ev35"]
+黑名单添加方式类似白名单，但信息只能是PeerId，不能包含其他信息，如下：
+[Libp2p]
+
+  BlacklistPeers = ["12D3KooWCinLYTPkxpjKcvuFjDKZZrRTf4J8aAFDQTK24rCZXxeV","12D3KooWAgtdgnUJUQ4AdtCbjPJXbCu95GmTDEJ5gnrMyoxM66T4","12D3KooWQDCBo3kVhaabAUs4UWzM9PShN1YupgBHMnPjyrY6ev35"]
+
+
+#### lotus负载均衡维护方法
+
+关于lotus-message负载均衡维护方法:
+(1) lotus-message在运行中出现:(1.1)mysql信息配置错误,(1.2)消息签名时找不到对应wallet地址,lotus-message会直接崩掉,运维监视进程是否存在即可;
+(2) lotus会向lotus-message上报自己的peerlist,lotus-message会连接lotus连接的所有节点,运维主要关注lotus的peerlist;
+(3) lotus发送消息失败会打印Error级别日志,需要监控,日志特征: ...  ERROR    messager ... ;
+(4) 规范部署流程,该加的启动参数,配置项启动前检查无误再启动;
+(5) lotus-message先与lotus启动;
+(6) 结果:lotus-message会同步lotus的peerlist(2分钟),所以连接数>=lotus的.
+从下个版本开始：目前commitid：lotus相关：5a3d3e08； lotus-message：3dcedd89
+
+### storagemarket代码 接口与实现结构
+本目录的一级目录放各个接口文件
+![-w250](media/15967877814886.jpg)
+client.go   为存储用户的接口文件：
+![-w1331](media/15967879920461.jpg)
+
+存储市场的接口文件：
+![-w1564](media/15967880425834.jpg)
+还有用户事件的常量定义：
+![-w1130](media/15967881149963.jpg)
+
+
+子目录impl放这些接口的实现文件， 如用户接口的实现文件：
+![-w1141](media/15967882578054.jpg)
+
+impl也把一些接口和实现放在同一个文件里：
+![-w1141](media/15967885246193.jpg)
+
+### lotus cmd 代码结构
+专门处理命令选项， 参数， 命令执行的包："github.com/urfave/cli/v2"， 
+lotus总的入口：
+![-w1324](media/15967834878021.jpg)
+
+lotus命令的各选项入口：
+![-w1276](media/15967835933441.jpg)
+client选项入口：
+![-w1086](media/15967836358409.jpg)
+
+./lotus client list-deals的执行函数：
+![-w921](media/15967838039034.jpg)
+
+#### 代码测试
+每个实现文件都有相应的test文件
+* 对返回值及error的判读：
+![-w1126](media/15967902978068.jpg)
+
+* 对状态转换的测试：
+![-w1645](media/15967911542167.jpg)
+
+
+封装了一个函数，
+
+![-w1519](media/15967912943835.jpg)
+这个函数的目标是把状态和对此状态的转换函数传到这个函数里， 就可以完成对状态转换函数的测试， 这里状态为
+storagemarket.StorageDealStartDataTransfer, 状态转换函数为：clientstates.InitiateDataTransfer。 
+makeExecutor函数会构造一个 被测试函数需要的一个虚拟环境：
+```
+		environment := &fakeEnvironment{
+			node:                   node,
+			dealStream:             envParams.dealStream,
+			startDataTransferError: envParams.startDataTransferError,
+			providerDealState:      envParams.providerDealState,
+			getDealStatusErr:       envParams.getDealStatusErr,
+			pollingInterval:        envParams.pollingInterval,
+			dealFunds:              tut.NewTestDealFunds(),
+		}
+```
+
+#### 算力期望
+一个集群， 希望一天能上100多T，   
+
+#### 常见命令 
+```
+ ./lotus-miner storage-deals get-ask
+Price per GiB / Epoch  Min. Piece Size (w/bit-padding)  Max. Piece Size (w/bit-padding)  Expiry (Epoch)  Expiry (Appx. Rem. Time)  Seq. No.
+500000000              256 B                            512 MiB                          1017361         8331h20m0s                1
+```
+
+设置后查询：
+```
+./lotus-miner storage-deals set-ask --price 0 --verified-price 0 --max-piece-size 512M
+
+./lotus-miner storage-deals get-ask
+Price per GiB / Epoch  Min. Piece Size (w/bit-padding)  Max. Piece Size (w/bit-padding)  Expiry (Epoch)  Expiry (Appx. Rem. Time)  Seq. No.
+0                      256 B                            512 MiB                          104050          720h0m0s                  2
+```
 #### 在大矿工，安排一个机会做provider
 
 一个机会做force-worker， sealer 发任务，这些都是基本流程
@@ -334,3 +459,78 @@ SELECT * FROM account_table WHERE t3address LIKE  "%t3qpgittw7mmj4mywoektv6e46al
 ```
 
 
+#### 消息错误， 也会导致 state get-actor 找不到地址
+
+![-w956](media/15967232359239.jpg)
+Receip: 显示failed, 
+导致：
+![-w1067](media/15967232990255.jpg)
+
+### 申请t0矿工的问题
+![-w919](media/15967670897419.jpg)
+
+解决办法：同样的账号再申请一次：
+![-w1510](media/15967685495641.jpg)
+所以是网络延迟等问题。 
+
+### provider 事件 状态转换图
+var ProviderEvents = fsm.Events{ 定义了一个事件将一个状态转换到另一个状态。 
+![-w1865](media/15967664960414.jpg)
+
+
+### 存储用户的事件与状态
+#### 状态转换图：
+![-w917](media/15967670691016.jpg)
+
+#### 状态， 进入状态立即执行的函数， 函数发的事件
+![-w1305](media/15967692962527.jpg)
+如：
+```
+var ClientStateEntryFuncs = fsm.StateEntryFuncs{
+	storagemarket.StorageDealEnsureClientFunds:  EnsureClientFunds,
+```
+表示一进入storagemarket.StorageDealEnsureClientFunds 这个状态， 就立即执行函数EnsureClientFunds, 这个函数执行结束后， 就立即触发一个事件，以驱动进入下一个状态：
+![-w1564](media/15967695228340.jpg)
+ 
+ 状态：StorageDealEnsureClientFunds
+ 进入状态后立即执行的函数：EnsureClientFunds
+函数结束后要出发的事件：ClientEventFundingInitiated
+这三个在状态图上的表示为：
+
+![-w1532](media/15967697698086.jpg)
+其他依此类推。 
+如：
+![-w667](media/15967698918471.jpg)
+
+#### 用户状态机
+![-w1355](media/15967705249878.jpg)
+
+状态机：
+![-w1273](media/15967705960705.jpg)
+状态机里有 状态和函数对应的map:
+StateEntryFuncs: clientstates.ClientStateEntryFuncs,
+即是上面讲到的状态，函数，事件。 
+
+#### go-fil-market实现了用户对订单的所有方法，lotus cmd client 直接调用go-fil-margket的实现
+go-fil-market对client的所有订单方法的实现：
+![-w1288](media/15967708590070.jpg)
+
+#### 存储市场的事件状态转换图：
+![-w1275](media/15967668087289.jpg)
+
+
+
+#### 使用 10.10.10.21 这个机会
+10.10.11.30
+10.10.11.31
+10.10.11.32
+10.10.11.33
+10.10.11.34
+10.10.11.35
+10.10.11.36
+10.10.11.37
+10.10.11.38
+10.10.11.39
+10.10.11.40
+amd: 
+10.10.10.21  
