--- a/区块链/存储与检索发单.md
+++ b/区块链/存储与检索发单.md
@@ -1,3 +1,76 @@
+#### 需求
+
+版本验证： 
+所有的软件版本必须 验证， 两个目标， 一个是验证绝对有效，放到大集群上， 不会有问题，  一个是能快速验证， 想办法让sealer最快速的验证。 
+
+渐变的更新软件版本， 
+
+在一个集群上没问题了， 再更新到集群B上， B一段时间没问题， 再跟新到集群C， 
+
+一种把错误检索到最小范围
+
+
+
+
+
+
+控制面板：
+
+1. 左侧菜单
+  一个菜单对应一个数据库连接
+
+2. sector 展开按钮
+task ， sealer日志， poster日志
+task里有日志， 直接进入另一个也买呢显示日志
+
+3. 
+
+页面跳转尽量不断开数据库链接，
+
+commitfailed. 按时间最新显示， 显示出 这个这个sector的ip
+
+超时判断
+
+sector 展开显示这个sector对应的task. 
+
+错误详情展开
+从err-msg 到log里抓取err-msg 前后50条log， 
+
+做这个sector的相应的sealer 日志展开 
+
+
+扇区失败， 直接点进去显示的应该是扇区失败列表
+
+报警：
+sector连续产生10个failed ，就要报警了
+
+
+####  p1 超过2个小时50分钟的： 
+
+#### 任务堆积
+![-w1401](media/15972220583980.jpg)
+
+
+#### 消息分数
+：
+![-w449](media/15972048976669.jpg)
+
+相关代码：
+分数的奖励与惩罚：
+![-w746](media/15972100970434.jpg)
+
+
+
+![-w1276](media/15972046165094.jpg)
+
+
+
+
+
+
+
+
+
 #### 订单 datatransfer 错误 
 ![-w1086](media/15971457326442.jpg)
 
@@ -119,7 +192,7 @@ Import 1, Root bafkqapiknnuwy3bafu4saydqnfsg6zranrxxi5ltfvzwk4twmvzgaozabjvws3dm
 
 2.使用上面import 得到的cid，和本地的t3 地址发单：
 ```
-    ./lotus client deal --start-epoch 10000 --from t3rf66ofoxbf7pb7dauajwx726wjsfno3jdvpyzyu6exjj7ecaqualdqureq42jrnws4z64aacamgmtexmbzpa bafkqauyknnuwy3bafu4saydqnfsg6zranrxxi5ltfvzwk4twmvzgaozabjvws3dmeawtsidaobuwi33gebwg65dvomww22lomvzgactlnfwgyibnheqga4djmrxwmidmn52hk43abifa t01011 0.0000000000000003 800000
+./lotus client deal --start-epoch 10000 --from t3rf66ofoxbf7pb7dauajwx726wjsfno3jdvpyzyu6exjj7ecaqualdqureq42jrnws4z64aacamgmtexmbzpa bafkqauyknnuwy3bafu4saydqnfsg6zranrxxi5ltfvzwk4twmvzgaozabjvws3dmeawtsidaobuwi33gebwg65dvomww22lomvzgactlnfwgyibnheqga4djmrxwmidmn52hk43abifa t01011 0.0000000000000003 800000
 WARN[0000] build parameter has set to testnet source="force_net_selector.go:41"
 bafyreiggsw6deikkgpiiq4imzxfjpzyyswivsy2nefprrfj7teeur2jxsy
 ```
