--- a/区块链/服务地址汇总.md
+++ b/区块链/服务地址汇总.md
@@ -311,15 +311,26 @@ group
 
 #### ssh 看后端服务
 
+linux编译服务器
 查看userbackend log：
 
 ```
 ssh root@192.168.1.207
+ssh root@192.168.1.189
 密码： Zaq12wsX
 cd /home/forcepool/backend-user/code/logs
 [root@shanghai192168001207 logs]# less forcepool-user.log
 
+192.168.1.162
+root/admin123
+
 ```
+
+Price per GiB: 0.0000000005 FIL
+Max Piece size: 512 MiB
+t0= t02138 queryPrice= 500000000 
+
+0.00 0000 0005 0000 0000
 
 #### 后端服务部署
 redis 用aws云服务商， 东京一个， 伦敦备用一个
@@ -376,10 +387,11 @@ http://jenkins.forceup.in/
 
 confluence 项目任务清单 和 开发文档分享：
 http://192.168.1.172:8090/welcome.action
-
-http://192.168.1.122:8090
 ligang
 lyqx
+
+http://192.168.1.122:8090
+
 
 新浪邮箱：
 kylinkylin99abc
