--- a/xiuxing/心得.md
+++ b/xiuxing/心得.md
@@ -2,9 +2,22 @@
 
 
 
+
+若努力是10分， 其中有几分拿来修行
+
+
+
+
+
+
+
+
 我们在梦里面会看到一个世界， 也有一个身体， 梦里的这个世界， 不能说只有梦里的这个身体的大脑看到的， 同样， 在这个世界， 也不鞥说这个大脑看到这个世界
 
 
+还有一苦， 干活很苦
+
+不能睡觉
     眼前这个世界 ， 终究是这个我选择出来的。
        业力驱动的这个世界， 
        这个世界是共识下的存在
