--- a/区块链/服务地址汇总.md
+++ b/区块链/服务地址汇总.md
@@ -392,8 +392,16 @@ lyqx
 
 http://192.168.1.122:8090
 
+#### jira software
+```
+http://192.168.1.117:8080/secure/RapidBoard.jspa?rapidView=20&projectKey=PMDEV&selectedIssue=PMDEV-195
+```
 
-新浪邮箱：
+ligang  uuRO0kfToaGS7x6N
+
+
+
+#### 新浪邮箱：
 kylinkylin99abc
 fsjsjsjx1
 
@@ -437,3 +445,4 @@ git push origin feature/codeservice
 
 
 ```
+
