--- a/区块链/消息请求.md
+++ b/区块链/消息请求.md
@@ -150,3 +150,21 @@ pubsub	go-libp2p-pubsub@v0.3.2/validation.go:340	message validation punted; igno
 #### makeminer add 的 log
  
  ![-w1737](media/15962677352905.jpg)
+
+
+#### GasPrice 含义
+
+![-w533](media/15997330087357.jpg)
+
+
+#### 消息的有效高度
+
+消息的过期时间， 
+有些消息有过期时间， 有些没有， 
+比如submmit类型的消息， 在P2做完之后产生的消息， 这个消息的过期时间为30分钟。 
+
+而转账的消息则没有时间限制， 比如过了消息发出两天后， 也可以上链 。 
+
+
+消息的有效高度， 
+超过了有效高度， 就不能再上链
